--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: gray;
 }
 body{
     font-family: 'Poppins', sans-serif;
@@ -30,6 +31,19 @@ body{
     margin-bottom: 10px;
     /* padding: 10px; */
 }
+.box .text span.active{
+    font-weight: bold;
+    color: lightseagreen;
+    text-decoration: underline;
+}
+.box .text span.correct{
+    color: green;
+}
+.box .text span.incorrect{
+    color: red;
+    /* outline: 1px solid #fff; */
+    background: #ffc0cb;
+}
 .box-2{
     display: flex;
     justify-content: space-between;
@@ -42,6 +56,9 @@ body{
     border-radius: 5px;
     border: 1px solid gray;
     outline: none;
+    opacity: 0;
+    position: absolute;
+    z-index: -99;
 }
 .btn{
     padding: 10px 20px;
