--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body{
     justify-content: center;
     align-items: center;
 }
+.heading{
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
 .container{
     width: 80%;
     background-color: lightcyan;
@@ -26,10 +31,13 @@ body{
     border-radius: 5px;
 }
 .text{
-    font-size: 20px;
+    font-size: 24px;
     font-weight: normal;
     margin-bottom: 10px;
-    /* padding: 10px; */
+    padding: 10px;
+    word-spacing: 16px;
+    line-height: 2;
+    letter-spacing: 1.6px;
 }
 .box .text span.active{
     font-weight: bold;
@@ -50,6 +58,10 @@ body{
     align-items: center;
     padding-top: 10px;
 }
+.box-2 p span{
+    font-weight: bold;
+    font-size: 22px;
+}
 .input-text{
     width: 100%;
     padding: 10px;
@@ -57,8 +69,9 @@ body{
     border: 1px solid gray;
     outline: none;
     opacity: 0;
+    width: 0;
     position: absolute;
-    z-index: -99;
+    z-index: 9;
 }
 .btn{
     padding: 10px 20px;
@@ -68,6 +81,7 @@ body{
     color: white;
     cursor: pointer;
     outline: none;
+    font-size: 18px;
 }
 .btn:hover{
     opacity: 0.8;
