--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     font-size: 50px;
     font-weight: bold;
     margin-bottom: 20px;
+    text-align: center;
 }
 .container{
     width: 80%;
@@ -31,13 +32,13 @@ body{
     border-radius: 5px;
 }
 .text{
-    font-size: 24px;
+    font-size: 22px;
     font-weight: normal;
     margin-bottom: 10px;
     padding: 10px;
-    word-spacing: 16px;
-    line-height: 2;
-    letter-spacing: 1.6px;
+    word-spacing: 12px;
+    line-height: 1.6;
+    letter-spacing: 1.2px;
 }
 .box .text span.active{
     font-weight: bold;
@@ -58,6 +59,7 @@ body{
     justify-content: space-between;
     align-items: center;
     padding-top: 10px;
+    gap: 10px;
 }
 .box-2 p span{
     font-weight: bold;
@@ -90,4 +92,26 @@ body{
 .box-2 p{
     font-size: 15px;
     font-weight: normal;
+}
+
+@media screen and (width<=520px) {
+    .box-2{
+        flex-direction: column;
+    }
+    .heading{
+        font-size: 30px;
+        /* background-color: red; */
+        margin: 30px 0 10px 0;
+    }
+    .container{
+        width: 100%;
+        padding:0;
+    }
+    body{
+        height: auto;
+        padding: 10px;
+    }
+    .box{
+        border: none;
+    }
 }
