Update CSS styles for responsive design

--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: gray;
+    /* color: gray; */
+    color: #646669;
 }
 body{
     font-family: 'Poppins', sans-serif;
-    background: lightseagreen;
+    /* background: lightseagreen; */
+    background:  #323437;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -21,44 +23,45 @@ body{
 }
 .container{
     width: 80%;
-    background-color: lightcyan;
-    border-radius: 10px;
+    /* background-color: lightcyan; */
+    /* border-radius: 10px; */
     padding: 20px;    
 }
 .box{
-    border: 2px solid gray;
+    /* border: 2px solid gray; */
     padding: 10px;
     margin-top: 10px;
     border-radius: 5px;
 }
 .text{
-    font-size: 22px;
-    font-weight: normal;
+    font-size: 24px;
+    font-weight: lighter;
     margin-bottom: 10px;
     padding: 10px;
     word-spacing: 12px;
     line-height: 1.6;
-    letter-spacing: 1.2px;
+    letter-spacing: 1.4px;
 }
 .box .text span.active{
-    font-weight: bold;
-    color: lightseagreen;
+    /* font-weight: bold; */
+    /* color: lightseagreen; */
+    color: #e2b714;
     text-decoration: underline;
 }
 .box .text span.correct{
-    color: green;
-    background: #aef1ae;
+    color: #31C48D;
+    /* background: #aef1ae; */
 }
 .box .text span.incorrect{
-    color: red;
+    color: #F05252;
     /* outline: 1px solid #fff; */
-    background: #ffc0cb;
+    /* background: #ffc0cb; */
 }
 .box-2{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 10px;
+    padding: 20px 10px;
     gap: 10px;
 }
 .box-2 p span{
@@ -80,7 +83,8 @@ body{
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: lightseagreen;
+    /* background-color: lightseagreen; */
+    background-color: #e2b714;
     color: white;
     cursor: pointer;
     outline: none;
