--- a/style.css
+++ b/style.css
@@ -1,39 +1,49 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     /* color: gray; */
     color: #646669;
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    font-weight: 500;
+    font-style: medium;
 }
-body{
+
+body {
     font-family: 'Poppins', sans-serif;
     /* background: lightseagreen; */
-    background:  #323437;
+    background: #323437;
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.heading{
+
+.heading {
     font-size: 50px;
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
 }
-.container{
+
+.container {
     width: 80%;
     /* background-color: lightcyan; */
     /* border-radius: 10px; */
-    padding: 20px;    
+    padding: 20px;
 }
-.box{
+
+.box {
     /* border: 2px solid gray; */
     padding: 10px;
     margin-top: 10px;
     border-radius: 5px;
 }
-.text{
+
+.text {
     font-size: 24px;
     font-weight: lighter;
     margin-bottom: 10px;
@@ -42,33 +52,39 @@ body{
     line-height: 1.6;
     letter-spacing: 1.4px;
 }
-.box .text span.active{
+
+.box .text span.active {
     /* font-weight: bold; */
     /* color: lightseagreen; */
     color: #e2b714;
     text-decoration: underline;
 }
-.box .text span.correct{
+
+.box .text span.correct {
     color: #31C48D;
     /* background: #aef1ae; */
 }
-.box .text span.incorrect{
+
+.box .text span.incorrect {
     color: #F05252;
     /* outline: 1px solid #fff; */
     /* background: #ffc0cb; */
 }
-.box-2{
+
+.box-2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 10px;
     gap: 10px;
 }
-.box-2 p span{
+
+.box-2 p span {
     font-weight: bold;
     font-size: 22px;
 }
-.input-text{
+
+.input-text {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
@@ -79,7 +95,8 @@ body{
     position: absolute;
     z-index: 9;
 }
-.btn{
+
+.btn {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -90,32 +107,38 @@ body{
     outline: none;
     font-size: 18px;
 }
-.btn:hover{
+
+.btn:hover {
     opacity: 0.8;
 }
-.box-2 p{
+
+.box-2 p {
     font-size: 15px;
     font-weight: normal;
 }
 
 @media screen and (width<=520px) {
-    .box-2{
+    .box-2 {
         flex-direction: column;
     }
-    .heading{
+
+    .heading {
         font-size: 30px;
         /* background-color: red; */
         margin: 30px 0 10px 0;
     }
-    .container{
+
+    .container {
         width: 100%;
-        padding:0;
+        padding: 0;
     }
-    body{
+
+    body {
         height: auto;
         padding: 10px;
     }
-    .box{
+
+    .box {
         border: none;
     }
 }
